Implement endpoint to create account
